codepkg/objects/History_Tracker_Configuration__mdt.object
<CustomObject>
    <description>Hold the Object for which History is to be tracked
Mention the fields on History_Tracker_Field _Configuration that you want to track on this object and establish a relationship .</description>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this is checked only then tracking is done.</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lookup_API_Name__c</fullName>
        <label>Lookup API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>History Tracker Configuration</label>
    <pluralLabel>History Tracker Configurations</pluralLabel>
</CustomObject>